--- a/multi-step-form/index.html
+++ b/multi-step-form/index.html
@@ -24,7 +24,6 @@
 <body>
         <div class="col-xs-12">
             <div class="col-md-12" >
-                <h3> Actions</h3>
 
 
         <div style="height:80px;"></div>
@@ -48,7 +47,7 @@
                                         <!--<input type="text" class="form-control" placeholder="Lastname" id="lname">-->
                                     <!--</div>-->
                                         <div class="form-group">
-                                            <input style="margin-top: 10px;" type="tel" name="TeamNumber" placeholder="Team Contact No.." class="form-control" id="email" required>
+                                            <input style="margin-top: 10px;" type="tel" name="TeamNumber" placeholder="Team Contact No.." class="form-control" id="teamNumber" required>
                                         </div>
 
                                         <div class="form-group">
@@ -109,7 +108,7 @@
                                     <!--</select>-->
                                 <!--</div>-->
 
-                                <button type="button" class="btn btn-back">Go Back</button>
+                                <button type="button" class="btn btn-back" id="BackButton" onclick="GoBack();">Go Back</button>
                                 <button type="button" class="btn btn-next float" style="float: right" >Next</button>
                             </div>
                         </fieldset>
