--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
         <div class="sidebar-brand-icon rotate-n-15">
-          <i class="fas fa-laugh-wink"></i>
+          <img src="https://img.icons8.com/color/48/000000/icons8-logo.png">
         </div>
         <div class="sidebar-brand-text mx-3">SparkIn </div>
       </a>
