--- a/participated_campaign.html
+++ b/participated_campaign.html
@@ -288,34 +288,6 @@
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
                     <h1 class="h3 mb-0 text-gray-800">Campaigns</h1>
                 </div>
-                <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-                    <!-- Topbar Search -->
-                    <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                        <div class="input-group">
-                            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2" style="left:-18px">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="button" style="left:-18px">
-                                    <i class="fas fa-search fa-sm"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-
-                    <div class="dropdown mb-4">
-                        <button class="btn btn-primary dropdown-toggle " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"   style="position:relative;
-  left:-25px;top:12px">
-                            <i class="fas fa-filter"></i><span> Filter</span>
-                        </button>
-                        <div class="dropdown-menu animated--fade-in" aria-labelledby="dropdownMenuButton" style="left: -50px">
-                            <a class="dropdown-item" href="#">Domain 1</a>
-                            <a class="dropdown-item" href="#">Domain 2</a>
-                            <a class="dropdown-item" href="#">Domain 3</a>
-                        </div>
-                    </div>
-                    <button class="btn btn-primary " type="button"  aria-haspopup="true" aria-expanded="false"><a href="campaignform.html" class="btn btn-primary" ></a>
-                        <span> Add New Campaign</span>
-                    </button>
-                </nav>
                 <!-- Basic Card Example -->
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
@@ -391,11 +363,11 @@
                                     <div class="modal-body">
                                         <form>
                                             <div class="form-group">
-                                                <label for="recipient-name" class="col-form-label">NAME:</label>
+                                                <label for="recipient-name" class="col-form-label">Campaign Name:</label>
                                                 <input type="text" class="form-control" id="recipient-name">
                                             </div>
                                             <div class="form-group">
-                                                <label for="message-text" class="col-form-label">ABOUT THE JUDGE:</label>
+                                                <label for="message-text" class="col-form-label">Your Solution: </label>
                                                 <textarea class="form-control" id="message-text"></textarea>
                                             </div>
                                         </form>
