--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="this is harsh's design !">
   <meta name="author" content="Harsh Ashok Visaria">
 
-  <title>SparkInPrototype</title>
+  <title>SparkIn-Ideator</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -458,7 +458,7 @@
                               <h4 class="card-title" ><span class="campaign12">CAMPAIGN_NAME </span><small class="date-time" style="float:right;">02/05/2020 & 00:00:00</small></h4>
                               <p class="type12 card-text"> Type</p>
                               <p class="team_members">Team members allowed :</p>
-                              <input type="submit" class="btn btn-primary" value="PARTICIPATE" style="float: right;margin-bottom: 5px;" formaction="campaignDetails.html" >
+                              <input type="submit" class="btn btn-primary" value="PARTICIPATE" style="float: right;margin-bottom: 5px;" formaction="selectedCampaign1.html" >
                       </div>
                   </div>
                   </form>
